I don't know why this was disabled, but not canceling the queued transfers after a timeout leaks these transfers. In the end this would at least lead to a flood of canceled transfers on device unplug or, worse yet, exhaust the USB memory pool stalling all further transfers as seen in #4604. Probably fixes both issues, can't test though as I don't have the hardware.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34915 a95241bf-73f2-0310-859d-f6bbb57e9c96