src/add-ons/kernel/drivers/input/wacom/wacom.c
@@ -547,7 +547,7 @@ device_read(void* cookie, off_t pos, void* buf, size_t* count)
 					B_RELATIVE_TIMEOUT, 500 * 1000);
 				// handle time out
 				if (ret < B_OK) {
-//					usb->cancel_queued_transfers(device->pipe);
+					usb->cancel_queued_transfers(device->pipe);
 					if (ret == B_TIMED_OUT) {
 						// a time_out is ok, since it only means that the device
 						// had nothing to report (ie mouse/pen was not moved)
